--- a/package.json
+++ b/package.json
@@ -10,5 +10,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
-	}
+	},
+
+	"author": "MAKOSSO BAYONNE Patrick De Grâce"
 }
