--- a/package.json
+++ b/package.json
@@ -12,5 +12,5 @@
 		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
 	},
 
-	"author": "MAKOSSO BAYONNE Patrick De Grâce"
+	"author": "MAKOSSO BAYONNE"
 }
